feature: - album details implemented